--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -1,20 +1,20 @@
-<nav aria-label="{{ header_menu.name }}" class="tablet-border-b bgcolor-white px-2 tablet:px-3 tablet:py-1 desktop:px-3 o-navigation" data-js="navigation">
-  <a class="center-align" href="{{ site.url }}">
-    <svg aria-hidden="true" class="o-navigation__svg tablet:hidden desktop:block fill-text text-brand" width="56" height="18">
+<nav aria-label="{{ header_menu.name }}" class="mobile-border-b-line tablet-border-b bgcolor-white px-3 o-navigation" data-js="navigation">
+  <a href="{{ site.url }}" class="my-auto">
+    <svg aria-hidden="true" class="o-navigation__svg hidden tablet:hidden desktop:block fill-text text-brand" width="56" height="18">
       <use href="#logo-nyc-black"></use>
     </svg>
   </a>
-    <div class="hidden tablet:block desktop:block desktop:pl-1 o-navigation__home center-align float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC') }}</div>
+    <div class="hidden tablet:block desktop:block desktop:pl-1 o-navigation__home my-auto float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC') }}</div>
   <div class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-    <svg class="o-navigation__menu-icon icon-ui">
+    <svg class="h-3 w-3">
       <use href="#languages-nav"></use>
+      <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC') }}</span>
     </svg>
-    <span class="">{{ __('Language | English', 'WNYC') }}</span>
   </div>
 </nav>
-<nav aria-label="{{ header_menu.name }}" class="desktop:hidden px-2 tablet:px-3 desktop:px-3 desktop:pb-3 o-navigation" data-js="navigation">
-  <div class="o-navigation__home center-align bg-scale-1 tablet:bg-transparent">
-  <a class="pr-2 hidden tablet:block" href="{{ site.url }}">
+<nav aria-label="{{ header_menu.name }}" class="bgcolor-white mobile-border-b-line desktop:hidden px-3 py-3 o-navigation" data-js="navigation">
+  <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
+  <a class="pr-2" href="{{ site.url }}">
     <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="56" height="18">
       <use href="#logo-nyc-black"></use>
     </svg>
@@ -24,6 +24,6 @@
   <a class="o-navigation__item mr-2 desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
   {% endfor %}
 </nav>
-<nav class="border-t border-solid border-slate-300 tablet:hidden desktop:hidden o-navigation" data-js="navigation">
-     <span class="o-navigation__home center-align py-2 mobile-font-size-13">Official website of the City of New York</span>
+<nav class="bgcolor-white tablet:hidden desktop:hidden o-navigation" data-js="navigation">
+     <span class="py-1 m-auto mobile-font-size-13">Official website of the City of New York</span>
 </nav>
