employer home page wip

--- a/wp-content/themes/workingnyc/src/scss/utilities/colors/_colors.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/colors/_colors.scss
@@ -6,3 +6,8 @@
 .fill-none{
     fill: none;    
 }
+
+// Employer homepage header custom gradient
+.employer-header-gradient {
+    background: linear-gradient(130deg, #33488D 11.21%, #30374F 79.88%);
+}
