--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -21,6 +21,9 @@
   .desktop-font-size-13 {
     font-size: 13px;
   }
+  .desktop-font-12 {
+    font-size: 12px;
+  }
   .desktop-nav-border{
     border-top: 4px solid #2D3282;
   }
