--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -38,7 +38,7 @@
     </div>
     <div>
       <div>
-        <h6>CUNY Cultural Corps is provided by</h6>
+        <h6>{{ post.employer_program_title }} is provided by</h6>
         <img class="w-[200px] mb-4" loading="lazy" src="{{ post.meta('employer_program_provider_logo').url }}" alt="{{ post.meta('employer_program_provider_logo').alt }}"/>
       </div>
       {# TODO: add related by taxonomy #}
