--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -62,8 +62,30 @@
   .desktop-nav-border{
     border-top: 4px solid #2D3282;
   }
+  .language-list-style ul {
+   list-style-type: none;
+   -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+  }
+  .language-list-style li {
+    margin-bottom: 0px;
+  }
+
 }
 @media screen and (min-width: 768px) and (max-width:1112px) {
+  .language-list-style {
+    margin-top: -87px;
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 25%;
+    margin-left: 72%;
+    padding: 16px 8px 16px 8px;
+  }
+  .language-list-style ul {
+    list-style-type: none;
+    padding-left: 0px;
+   }
   .tablet-width-366 {
     width: 366px;
   }
@@ -87,6 +109,18 @@
   }
 }
 @media screen and (max-width: 480px) {
+  .language-list-style {
+    margin-top: -103px;
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 50%;
+    margin-left: 48%;
+    padding: 16px 8px 16px 8px;
+  }
+  .language-list-style ul {
+    list-style-type: none;
+    padding-left: 0px;
+   }
   .mobile-width-360 {
     width: 360px;
   }
