--- a/wp-content/themes/workingnyc/views/objects/languages-dropdown.twig
+++ b/wp-content/themes/workingnyc/views/objects/languages-dropdown.twig
@@ -1,4 +1,4 @@
-<div class="desktop-px-120 desktop:py-4 relative z-10" id="aria-c-text-controller">
+<div class="hidden desktop-px-120 desktop:py-4 relative z-10" id="aria-c-text-controller">
       <div class="hidden desktop:block desktop:float-left desktop:mr-8">
       <span class="h4">{{ __('Select your language', 'WNYC - Navigation') }}</span>
       </div>
