--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -5,12 +5,12 @@
     </svg>
   </a>
     <div class="hidden tablet:block desktop:block desktop:pl-1 o-navigation__home my-auto float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC') }}</div>
-  <div class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+  <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
     <svg class="h-3 w-3">
       <use href="#languages-nav"></use>
       <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC') }}</span>
     </svg>
-  </div>
+  </button>
 </nav>
 <nav aria-label="{{ header_menu.name }}" class="bgcolor-white mobile-border-b-line desktop:hidden px-3 py-3 o-navigation" data-js="navigation">
   <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
