--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -51,8 +51,40 @@
     .desktop-height-214 {
       height: 214px;
     }
+    .language-list-style ul {
+      list-style-type: none;
+      -webkit-column-count: 3;
+       -moz-column-count: 3;
+       column-count: 3;
+     }
+     .language-list-style li {
+       margin-bottom: 0px;
+     }
+     .desktop-h-112 {
+      height: 112px;
+    }
+    .desktop-px-120 {
+      padding-left: 120px;
+      padding-right: 120px;
+    }
+    .language-style {
+      background-color: #FFFFFF;
+      margin-top: -68px;
+    }
 }
 @media screen and (min-width: 768px) and (max-width:1112px) {
+  .language-list-style {
+    margin-top: -63px;
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 25%;
+    margin-left: 72%;
+    padding: 16px 8px 16px 8px;
+  }
+  .language-list-style ul {
+    list-style-type: none;
+    padding-left: 0px;
+   }
   .desktop-font-size-13 {
     font-size: 13px;
   }
@@ -69,7 +101,19 @@
     border-top: 4px solid #2D3282;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 480px) {
+  .language-list-style {
+    margin-top: -103px;
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 50%;
+    margin-left: 48%;
+    padding: 16px 8px 16px 8px;
+  }
+  .language-list-style ul {
+    list-style-type: none;
+    padding-left: 0px;
+   }
   .tablet-mx-14 {
     margin-left: 56px!important;
     margin-right: 56px!important;
