--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -5,12 +5,15 @@
     </svg>
   </a>
   <span class="my-auto hidden tablet:block desktop:block tablet:pl-1 desktop:pl-1 o-navigation__home float-left desktop-font-size-13">Official website of the City of New York</span>
-  <div class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-    <svg class="my-auto" height="20" width="20">
-      <use href="#nyco-languages"></use>
+  <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+    <svg class="h-3 w-3">
+      <use href="#languages-nav"></use>
+      <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC') }}</span>
     </svg>
-    <span class="my-auto desktop-font-12">{{ __('Language | English', 'WNYC') }}</span>
-  </div>
+  </button>
+  <span class="my-auto desktop:hidden mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Jobseeker', 'WNYC') }}</span>
+  <span class="my-auto desktop:hidden mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Employer', 'WNYC') }}</span>
+  
 </nav>
 <nav aria-label="{{ header_menu.name }}" class="bgcolor-white desktop-nav-border px-2 tablet:px-5 desktop:px-3 desktop:pb-3 o-navigation" data-js="navigation">
   <div class="o-navigation__home center-align bg-scale-1 tablet:bg-transparent">
@@ -21,10 +24,7 @@
   </a>
    <span class="desktop:pl-2 desktop:border-l desktop:border-solid desktop:border-slate-300 desktop-font-18">{{ __('Employers', 'WNYC') }}</span>
   </div>  
-  <span class="hidden tablet:hidden desktop:block mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Hire or develop talent', 'WNYC') }}</span>
-  <span class="hidden tablet:hidden desktop:block mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Jobseeker', 'WNYC') }}</span>
-  <span class="hidden tablet:hidden desktop:block mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Employer', 'WNYC') }}</span>
-  <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
+<button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="o-navigation__menu-icon icon-ui">
       <use href="#lucide-menu"></use>
     </svg>
@@ -33,4 +33,9 @@
 </nav>
 <nav class="bgcolor-white border-t border-solid border-slate-300 tablet:hidden desktop:hidden o-navigation" data-js="navigation">
      <span class="o-navigation__home m-auto py-2 mobile-font-size-13">Official website of the City of New York</span>
+</nav>
+<nav id="aria-c-menu" class="px-2 py-2 tablet:px-5 tablet:py-2 hidden bgcolor-white border-t border-solid border-slate-300">
+  <div class="py-2 px-1 text-sm" href="#">{{ __('Hire or Develop Talent', 'WNYC') }}</div>
+  <div class="py-2 px-1 text-sm" href="#">{{ __('Employer', 'WNYC') }}</div>
+  <div class="py-2 px-1 text-sm" href="#">{{ __('Jobseeker', 'WNYC') }}</div>
 </nav>
