changes-as-per-AC-last-checking-service-nava

--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -11,8 +11,8 @@
       <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC') }}</span>
     </svg>
   </button>
-  <span class="my-auto desktop:hidden mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Jobseeker', 'WNYC') }}</span>
-  <span class="my-auto desktop:hidden mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Employer', 'WNYC') }}</span>
+  <span class="my-auto hidden mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Jobseeker', 'WNYC') }}</span>
+  <span class="my-auto hidden mr-2 desktop-px-12 desktop-font-14" href="#">{{ __('Employer', 'WNYC') }}</span>
   
 </nav>
 <nav aria-label="{{ header_menu.name }}" class="bgcolor-white desktop-nav-border px-2 tablet:px-5 desktop:px-3 desktop:pb-3 o-navigation" data-js="navigation">
@@ -24,6 +24,9 @@
   </a>
    <span class="desktop:pl-2 desktop:border-l desktop:border-solid desktop:border-slate-300 desktop-font-18">{{ __('Employers', 'WNYC') }}</span>
   </div>  
+  <span class="my-auto hidden desktop:block desktop-px-12 desktop-font-14" href="#">{{ __('Hire or Develop Talent', 'WNYC') }}</span>
+  <span class="my-auto hidden desktop:block desktop-px-12 desktop-font-14" href="#">{{ __('Jobseeker', 'WNYC') }}</span>
+  <span class="my-auto hidden desktop:block desktop-px-12 desktop-font-14" href="#">{{ __('Employer', 'WNYC') }}</span>
 <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="o-navigation__menu-icon icon-ui">
       <use href="#lucide-menu"></use>
