--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -10,23 +10,27 @@
 </div>
 
 {% if post.thumbnail %}
-    <div>
+    <div class="relative">
+        <div class="absolute grid desktop:grid-cols-2 gap-4 text-center mobile-margin tablet-margin desktop-margin">
+            <div class="bg-white cards-wh py-4">
+                <h3>{{ post.meta('subtitle_1') }}</h3>
+                <p>{{ post.meta('description_1') }}</p>
+                <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
+            </div>
+            <div class="bg-white cards-wh py-4">
+                <h3>{{ post.meta('subtitle_2') }}</h3>
+                <p>{{ post.meta('description_2') }}</p>
+                <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
+            </div>
+        </div>
         <img loading="lazy" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
     </div>
 {% endif %}
-
-<div class="grid grid-cols-2 layout-content text-center my-5">
-<div>
-    <h3>{{ post.meta('subtitle_1') }}</h3>
-    <p>{{ post.meta('description_1') }}</p>
-    <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
+<div class="layout-content text-center my-5 tablet:my-6 desktop:my-7">
+    <h1>Agency Partners</h1>
+   <div class="mt-4 mx-2 tablet:mx-7 desktop-mx-26">
+   <img loading="lazy" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
+   </div>
 </div>
-<div>
-    <h3>{{ post.meta('subtitle_2') }}</h3>
-    <p>{{ post.meta('description_2') }}</p>
-    <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
-</div>
-</div>
-
 </div>
 {% endblock %}
