--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -4,6 +4,10 @@
 
 // Creating classes as copies of the tailwind classes because some imports aren't working
 @media screen and (min-width:1112px) { 
+    .desktop-py-121 {
+      padding-top: 121px;
+      padding-bottom: 121px;
+    }
     .desktop-mx-50 {
       margin-left: 200px!important;
       margin-right: 200px!important;
@@ -23,6 +27,10 @@
     }
 }
 @media screen and (min-width: 768px) {
+  .tablet-py-48 {
+      padding-top: 48px;
+      padding-bottom: 48px;
+  }
   .tablet-mx-14 {
     margin-left: 56px!important;
     margin-right: 56px!important;
@@ -39,4 +47,10 @@
 
 .site-max-width {
   max-width: var(--nyco-dimension-site-max-width);
+}
+@media screen and (max-width: 768px) {
+  .mobile-py-40 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
