--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -4,6 +4,24 @@
 
 // Creating classes as copies of the tailwind classes because some imports aren't working
 @media screen and (min-width:1112px) { 
+    .span-class {
+      position: absolute;
+      display: inline-block;
+    }
+    .span-class::before {
+      content: ' ';
+      position: absolute;
+      left:0;
+      top: 50px;
+      right: 0;
+      bottom: 0;
+      background: #DAE6FF;
+      border-radius: 200px 200px 0 0;
+      width:400px;
+    }
+    .image-background {
+      position: relative;
+    }
     .desktop-py-121 {
       padding-top: 121px;
       padding-bottom: 121px;
@@ -26,7 +44,7 @@
       height: 214px;
     }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width:1112px) {
   .tablet-py-48 {
       padding-top: 48px;
       padding-bottom: 48px;
