--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -2,7 +2,7 @@
 {# @For    Post Type #}
 {# @Class  timber-posts/Programs.php #}
 <article class="c-card h-full {{ post.classes }}">
-  <header class="c-card__header">
+  <header class="">
     <span>
       <a class="c-card__header-link" href="{{ post.link }}" {% if post.external %}target="_blank" rel="noopener"{% endif %}>
         <h3 class="c-card__title">
