--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div>
-  <header class="mt-5 mx-3 tablet-mx-14 desktop-mx-26">
+  <header class="mt-5 tablet:mt-6 desktop:mt-7 mx-3 tablet-mx-14 desktop-mx-26">
     <div class="w-full grid tablet:grid-cols-[1fr_4fr] tablet:gap-x-4 ">
       <img class="w-[200px]" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
       <div>
@@ -56,7 +56,7 @@
   </div>
   <div class="mb-7 mx-3 tablet-mx-14 desktop-mx-26">
     <h3>Similar programs</h3>
-    <div class="grid desktop:grid-cols-3 desktop:gap-x-2">
+    <div class="grid grid-cols-2 gap-2 desktop:grid-cols-3 desktop:gap-x-2">
       {% for program in post.meta('similar_programs') %}
       <div>
       {% include 'employer-programs/employer-program.twig' with { post: program } %}
